--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ ul li strong { color: #b03a2e; font-weight: 700; }
 
         <div class="price">R$ 149,90</div>
 
-        <button class="btn-buy" onclick="window.location.href='https://www.google.com'">
+        <button class="btn-buy" onclick="window.location.href='https://sorteio-barato.pay.yampi.com.br/checkout?skipToCheckout=1&tokenReference=B2DWR5PHOU'">
             Comprar Agora - Pagamento Seguro
         </button>
 
@@ -229,3 +229,4 @@ ul li strong { color: #b03a2e; font-weight: 700; }
     </div>
 </body>
 </html>
+
